不知道写什么

--- a/about/index.html
+++ b/about/index.html
@@ -120,8 +120,7 @@
 &emsp;&emsp;萌新一枚&hellip;但对编程有着热情。看着那么多语言，比如这个博客就是Go语言搭的，可是我连java还..啊啊啊啊啊啊啊(இωஇ )
 ；<br />
 喜欢Animation(以前都是看老婆，现在爽就完事了)， 特摄(可是到目前为止还没有一条腰带o(╥﹏╥)o), 喜欢听日系和Rap(八爷的武道馆太棒了)
-哈哈哈。。目前就这样，以后想到再写..就这样吧。
-<img src="http://image.baidu.com/search/detail?ct=503316480&z=undefined&tn=baiduimagedetail&ipn=d&word=pinkguy&step_word=&ie=utf-8&in=&cl=2&lm=-1&st=undefined&hd=undefined&latest=undefined&copyright=undefined&cs=1084449943,320881241&os=2069549186,390680188&simid=3317568948,370098899&pn=3&rn=1&di=12980&ln=159&fr=&fmq=1574596140687_R&fm=&ic=undefined&s=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=undefined&is=0,0&istype=0&ist=&jit=&bdtype=0&spn=0&pi=0&gsm=0&objurl=http%3A%2F%2Fi0.hdslb.com%2Fbfs%2Farchive%2F08666d7020ee0ced1c6a0a028879aa0ae3d0f628.jpg&rpstart=0&rpnum=0&adpicid=0&force=undefined" width = "100%"  div align=center /></p>
+哈哈哈。。目前就这样，以后想到再写..就这样吧。</p>
 
 <ul>
 <li>荆轲刺秦</li>
