--- a/index.html
+++ b/index.html
@@ -205,13 +205,43 @@
                                         <path fill-rule="evenodd"
                                             d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
                                     </svg>
+                                    <a href="https://pinkguy233.github.io/post/%E4%BC%AA%E5%88%97/" class="text-bold flex-auto min-width-0 ">
+                                        <span class="repo js-pinnable-item" title="rownum和rowid伪列">rownum和rowid伪列</span>
+                                    </a>
+                                </div>
+                                伪列介绍：  伪列不存在于任何一张表中，但是会被所有的表共享 伪列可以从表中查询，但不能进行DML操作 常用的伪列有ROWID和ROWNUM  DISTINCT（去重）关键字  不重复显示所有学员姓名和年龄 select DISTINCT stuName,stuAge From stuInfo  STUNAME STUAGE
+王五 15 张三 20 张三 18 李四 20
+可以看到少了一条学号4的数据；
+现有一张stuInfo表，对该表进行操作
+ STUNO STUNAME STUAGE STUID STUSEAT   1 张三 18 1 2 李四 20 2 3 王五 15 3 4 张三 18 4 5 张三 20 5  查询学生姓名，年龄，rowid与rownum （注意需要给表加别名）
+select rowid,rownum,s.stuname,s.stuage from stuInfo s  ROWID ROWNUM STUNAME STUAGE
+AAARUyAAEAAAAGQAAA 1 张三 18 AAARUyAAEAAAAGQAAB 2 李四 20 AAARUyAAEAAAAGQAAC 3 王五 15 AAARUyAAEAAAAGQAAD 4 张三 18 AAARUyAAEAAAAGQAAE 5 张三 20
+                                <div class="f6 text-gray mt-2">
+                                    Updated <relative-time datetime="2019-11-25"
+                                        class="no-wrap" title="Modify at 2019/11/25">
+                                        November 25, 2019</relative-time>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    
+                    <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
+                        <div
+                            class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
+                            <div class="pinned-item-list-item-content" name="pinned-post">
+                                <div class="d-flex width-full flex-items-center position-relative">
+                                    <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0" viewBox="0 0 12 16"
+                                        version="1.1" width="12" height="16" aria-hidden="true">
+                                        <path fill-rule="evenodd"
+                                            d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
+                                    </svg>
                                     <a href="https://pinkguy233.github.io/post/%E5%AD%A6%E4%B9%A0%E6%97%A5%E5%BF%97-oracle/" class="text-bold flex-auto min-width-0 ">
-                                        <span class="repo js-pinnable-item" title="oracle学习日志">oracle学习日志</span>
+                                        <span class="repo js-pinnable-item" title="oracle介绍">oracle介绍</span>
                                     </a>
                                 </div>
                                  前言： Oracle Database，又名Oracle RDBMS，或简称Oracle。是甲骨文公司的一款关系数据库管理系统。它是在数据库领域一直处于领先地位的产品。可以说Oracle数据库系统是目前世界上流行的关系数据库管理系统，系统可移植性好、使用方便、功能强，适用于各类大、中、小、微机环境。它是一种高效率、可靠性好的、适应高吞吐量的数据库方案。 ——来着百度百科
 [TOC]
-一，oracle的基础概念 1.1 主流的关系型数据库  oracle：产品免费，服务收费，强大稳定，安全性高 mysql：AB开源，2008被SUN收购，2009被Oracle收购；社区版免费，企业版收费。 sql server：微软开发，强大的图形化工具，方便使用。 db2：IBM，多个操作系统，多个硬件。  ​
+oracle的基础概念 1.1 主流的关系型数据库  oracle：产品免费，服务收费，强大稳定，安全性高 mysql：AB开源，2008被SUN收购，2009被Oracle收购；社区版免费，企业版收费。 sql server：微软开发，强大的图形化工具，方便使用。 db2：IBM，多个操作系统，多个硬件。  ​
 1.2 oracle版本  oracle8i/9i：internet，开始走向网络
  oracle10g/11g：grid，网格计算，提高访问速度，避免舍近求远的问题
  oracle12：cloud，云计算
@@ -278,31 +308,6 @@ oracle服务器
                                     Updated <relative-time datetime="2019-11-23"
                                         class="no-wrap" title="Modify at 2019/11/23">
                                         November 23, 2019</relative-time>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    
-                    <li class="col-12 col-md-6 col-lg-6 mb-3 d-flex flex-content-stretch">
-                        <div
-                            class="Box pinned-item-list-item d-flex p-3 width-full js-pinned-item-list-item public source  sortable-button-item">
-                            <div class="pinned-item-list-item-content" name="pinned-post">
-                                <div class="d-flex width-full flex-items-center position-relative">
-                                    <svg class="octicon octicon-repo mr-2 text-gray flex-shrink-0" viewBox="0 0 12 16"
-                                        version="1.1" width="12" height="16" aria-hidden="true">
-                                        <path fill-rule="evenodd"
-                                            d="M4 9H3V8h1v1zm0-3H3v1h1V6zm0-2H3v1h1V4zm0-2H3v1h1V2zm8-1v12c0 .55-.45 1-1 1H6v2l-1.5-1.5L3 16v-2H1c-.55 0-1-.45-1-1V1c0-.55.45-1 1-1h10c.55 0 1 .45 1 1zm-1 10H1v2h2v-1h3v1h5v-2zm0-10H2v9h9V1z" />
-                                    </svg>
-                                    <a href="https://pinkguy233.github.io/post/test/" class="text-bold flex-auto min-width-0 ">
-                                        <span class="repo js-pinnable-item" title=""></span>
-                                    </a>
-                                </div>
-                                title: &ldquo;java基础&rdquo; date: 2019-11-23 15:10:24+08:00 draft: true
-cover: 上面是犬夜叉拉
-                                <div class="f6 text-gray mt-2">
-                                    Updated <relative-time datetime="0001-01-01"
-                                        class="no-wrap" title="Modify at 0001/01/01">
-                                        January 1, 0001</relative-time>
                                 </div>
                             </div>
                         </div>
